--- a/FrontEnd/ConectaMais/src/index.html
+++ b/FrontEnd/ConectaMais/src/index.html
@@ -5,7 +5,16 @@
   <title>ConectaMais</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- icone do angular-->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- /icone do angular-->
+    <!-- link para icones -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <!-- /link para icones -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <app-root></app-root>
