--- a/FrontEnd/ConectaMais/src/index.html
+++ b/FrontEnd/ConectaMais/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <title>ConectaMais</title>
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
       integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <!-- /link para icones -->
+    <!-- estilo personalizado para todos os componentes-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
