--- a/FrontEnd/ConectaMais/src/index.html
+++ b/FrontEnd/ConectaMais/src/index.html
@@ -8,12 +8,18 @@
     <!-- icone do angular-->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- /icone do angular-->
+
     <!-- link para icones -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
       integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <!-- /link para icones -->
+
+    <!-- link animaçoes -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- /link animaçoes -->
+    
     <!-- estilo personalizado para todos os componentes-->
     <link rel="stylesheet" href="styles.css">
 </head>
