--- a/FrontEnd/ConectaMais/src/index.html
+++ b/FrontEnd/ConectaMais/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- icone do angular-->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/img/logoColoridofav.ico">
     <!-- /icone do angular-->
 
     <!-- link para icones -->
