modificando a fonte do site

--- a/FrontEnd/ConectaMais/src/index.html
+++ b/FrontEnd/ConectaMais/src/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
       integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <!-- /link para icones -->
-
+    <!-- link para fonte -->
+    <link href="https://fonts.googleapis.com/css?family=Alegreya|Bree+Serif" rel="stylesheet">
+    <!-- /link para fonte -->
     <!-- link animaçoes -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- /link animaçoes -->
